--- a/ngram_summarization.ipynb
+++ b/ngram_summarization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,15 +164,23 @@
     "#Text Summarization - go through  below links\n",
     "https://towardsdatascience.com/understand-text-summarization-and-create-your-own-summarizer-in-python-b26a9f09fc70\n",
     "https://towardsdatascience.com/text-summarization-in-python-76c0a41f0dc4\n",
-    "https://stackabuse.com/text-summarization-with-nltk-in-python/\n",
+    "https://stackabuse.com/text-summarization-with-nltk-in-python/  \n",
     "https://www.analyticsvidhya.com/blog/2018/11/introduction-text-summarization-textrank-python/\n",
     "https://rare-technologies.com/text-summarization-in-python-extractive-vs-abstractive-techniques-revisited/\n",
-    "https://becominghuman.ai/text-summarization-in-5-steps-using-nltk-65b21e352b65"
+    "https://becominghuman.ai/text-summarization-in-5-steps-using-nltk-65b21e352b65https://towardsdatascience.com/data-scientists-guide-to-summarization-fc0db952e363 - very nice so far\n",
+    "\n",
+    "Text Summarization with Spicy : https://www.youtube.com/watch?v=XcZGKAF5zxg&t=90s\n",
+    "https://stackabuse.com/text-summarization-with-nltk-in-python/\n",
+    "https://www.analyticsvidhya.com/blog/2018/11/introduction-text-summarization-textrank-python/\n",
+    "https://www.youtube.com/watch?v=8p9nHmtwk0o\n",
+    "https://www.machinelearningplus.com/nlp/gensim-tutorial/\n",
+    "https://towardsdatascience.com/data-scientists-guide-to-summarization-fc0db952e363 - very nice so far\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -220,7 +230,7 @@
       "Summary:\n",
       " Each layer in the feature extraction module extracted features with growing complexity regarding the previous layer.[39]\\n In 1995, Brendan Frey demonstrated that it was possible to train (over two days) a network containing six fully connected layers and several hundred hidden units using the wake-sleep algorithm, co-developed with Peter Dayan and Hinton.[40] Many factors contribute to the slow speed, including the vanishing gradient problem analyzed in 1991 by Sepp Hochreiter.[41][42]\\n Simpler models that use task-specific handcrafted features such as Gabor filters and support vector machines (SVMs) were a popular choice in the 1990s and 2000s, because of artificial neural network\\'s (ANN) computational cost and a lack of understanding of how the brain wires its biological networks.\\n Both shallow and deep learning (e.g., recurrent nets) of ANNs have been explored for many years.[43][44][45] These methods never outperformed non-uniform internal-handcrafting Gaussian mixture model/Hidden Markov model (GMM-HMM) technology based on generative models of speech trained discriminatively.[46] Key difficulties have been analyzed, including gradient diminishing[41] and weak temporal correlation structure in neural predictive models.[47][48] Additional difficulties were the lack of training data and limited computing power.\\n Most speech recognition researchers moved away from neural nets to pursue generative modeling.\n",
       "In 2003, LSTM started to become competitive with traditional speech recognizers on certain tasks.[52] Later it was combined with connectionist temporal classification (CTC)[53] in stacks of LSTM RNNs.[54] In 2015, Google\\'s speech recognition reportedly experienced a dramatic performance jump of 49% through CTC-trained LSTM, which they made available through Google Voice Search.[55]\\n In 2006, publications by Geoff Hinton, Ruslan Salakhutdinov, Osindero and Teh[56]\\n[57][58] showed how a many-layered feedforward neural network could be effectively pre-trained one layer at a time, treating each layer in turn as an unsupervised restricted Boltzmann machine, then fine-tuning it using supervised backpropagation.[59] The papers referred to learning for deep belief nets.\\n Deep learning is part of state-of-the-art systems in various disciplines, particularly computer vision and automatic speech recognition (ASR).\n",
-      "Original text character length:  42585\n",
+      "Original text character length:  42363\n",
       "Summary text character length:  2356\n",
       "Compression Ratio:  94 %\n",
       "\n",
